<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/GlobalSearchLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controllers.Activities.SearchAndNotificationsActivity">

    <LinearLayout
        android:id="@+id/GlobalSearchLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Toolbar setup-->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Search Layout-->
        <RelativeLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_centerHorizontal="true"
                android:id="@+id/SearchField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="40sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="Search query"/>


            <!--Parameters Main Layout-->
            <LinearLayout
                android:id="@+id/checkboxesMainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SearchField"
                android:orientation="horizontal"
                android:weightSum="100">

                <!--Left Layout-->
                <LinearLayout
                    android:layout_below="@+id/SearchField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:orientation="vertical"
                    android:layout_weight="50">

                    <TextView
                        android:id="@+id/StartDateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/primaryText"
                        android:text="Start Date:"/>

                    <TextView
                        android:id="@+id/search_startDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_marginBottom="30dp"
                        android:textSize="15sp"
                        android:hint="@string/hint_date"
                        style="@android:style/Widget.Holo.Spinner"
                        android:onClick="searchDatePicker"/>

                    <CheckBox
                        android:id="@+id/checkbox_arts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_arts"
                        android:onClick="onCheckboxClicked"/>

                    <CheckBox
                        android:id="@+id/checkbox_business"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_business"
                        android:onClick="onCheckboxClicked"/>
                    <CheckBox
                        android:id="@+id/checkbox_entrepreneurs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_entrepreneurs"
                        android:onClick="onCheckboxClicked"/>


                </LinearLayout>

                <!--Right Layout-->
                <LinearLayout
                    android:layout_below="@+id/SearchField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="50">

                    <TextView
                        android:id="@+id/EndDateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/primaryText"
                        android:text="End Date"/>

                    <TextView
                        android:id="@+id/search_endDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:padding="15dp"
                        android:onClick="searchDatePicker"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/hint_date"
                        style="@android:style/Widget.Holo.Spinner"/>

                    <CheckBox
                        android:id="@+id/checkbox_politics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_politics"
                        android:onClick="onCheckboxClicked"/>

                    <CheckBox
                        android:id="@+id/checkbox_sports"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_sports"
                        android:onClick="onCheckboxClicked"/>
                    <CheckBox
                        android:id="@+id/checkbox_travel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_travel"
                        android:onClick="onCheckboxClicked"/>


                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkboxesMainLayout"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:textSize="20sp"
                    android:background="@color/design_default_color_primary"
                    android:textColor="@color/GeneralText"
                    android:width="250dp"
                    android:text="Search"
                    android:onClick="searchButtonOnClickAction"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/notifications_switchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_below="@+id/searchButton"
                    android:layout_marginTop="50dp"
                    android:text="Enable notifications (once per day)    "
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>



        </RelativeLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>

