<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--Search icon-->
    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/baseline_search_white_18dp"
        app:showAsAction="always"
        android:title=""
        android:orderInCategory="0">
    </item>

    <!--Overflow menu items-->
    <item
        android:id="@+id/over_flow_item_1"
        android:title="@string/itme_1"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/over_flow_item_2"
        android:title="@string/item_2"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/over_flow_item_3"
        android:title="@string/item_3"
        android:orderInCategory="3"/>
</menu>