...

    <!--Used in navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Overflow menu items-->
    <string name="itme_1">Notifications</string>
    <string name="item_2">Help</string>
    <string name="item_3">About</string>

    <!--Search Activity XML-->
    <string name="hint_date"><u>dd/mm/yyyy</u></string>
    <string name="category_arts">Arts</string>
...
    <string name="end_date">end_date</string>
    <string name="filter_query">filter_query</string>
    <string name="search_query">search_query</string>
    <string name="sort">sort</string>
    <string name="sort_value">newest</string>
    <string name="no_results">Couldn\'t find results for your query</string>
    <string name="Your_filter_field_is_empty">Please select at least one category</string>
    <string name="category_arts_filter">\"Arts\"</string>
    <string name="category_business_filter">\"Business\"</string>
    <string name="category_entrepreneurs_filter">\"Entrepreneurs\"</string>
    <string name="category_politics_filter">\"Politics\"</string>
    <string name="category_sports_filter">\"Sports\"</string>
    <string name="category_travel_filter">\"Travel\"</string>
...
