<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/fragment_page_1_rootview"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/recyclerViewBackground">


    <!--Toolbar setup-->
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/RelativeLayout_SearchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/searchResults_loadingAnimation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_results_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:padding="@dimen/recyclerView_padding">

            </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>

    </LinearLayout>

